Add Section Books

--- a/index.html
+++ b/index.html
@@ -8,9 +8,96 @@
     <link rel="shortcut icon" href="favicon/bookmarks.svg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <!-- <header>
     <h1>Feelty</h1>
-    </header>
+    </header> -->
+    <section id="home">
+
+        <div class="container-home">
+            <img src="/favicon/bookmarks.svg" 
+            alt="logo">
+        <h1>Feelty</h1>
+        <h3>Cambia tu persona</h3>
+        <p>Avanza y has importantes cambios en tu vida.</p>
+        <a href="#books"><button>Mis libros</button></a>
+    </div>
+    </section>
+
+    <section id="books">
+        <img src="img/Branding/feelty.png" 
+        class="feelty" alt="Feelty">
+        <div class="container-books">
+            <h2>Todos mis libros</h2>
+            <div class="item-book">
+                <div class="caratula">
+                <img src="img/Caratulas-libros/CARATULA-PRINCIPITO-FINAL-SEGUNA-EDICION-CURVAS.jpg" 
+                alt="book-1">
+                </div>
+                <h2>El Principito</h2>
+                <p>El libro del principito es un libro que se lee cuando se tiene que hacer algo que no se puede hacer en la vida normal. Es un libro que nos enseña a hacer cosas que no se pueden hacer en la vida normal.</p>
+                <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
+            </div>
+            <div class="item-book">
+                <div class="caratula">
+                <img src="https://es.web.img2.acsta.net/pictures/15/01/26/13/38/226702.jpg" 
+                alt="book-2">
+                </div>
+                <h2>El libro de la vida</h2>
+                <p>El libro de la vida es un libro que se lee cuando se tiene que hacer algo que no se puede hacer en la vida normal. Es un libro que nos enseña a hacer cosas que no se pueden hacer en la vida normal.</p>
+                <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
+            </div>
+            <div class="item-book">
+                <div class="caratula">
+                <img src="https://images.cdn2.buscalibre.com/fit-in/360x360/4f/83/4f83ccdd48c8171e335531d12f58a52d.jpg" 
+                alt="book-3">
+            </div>
+                <h2>Satanás</h2>
+                <p>Satanás es un libro de Mario Mendoza y es uno de los libros más populares de la serie de libros de la saga de los libros de Mario Mendoza. Trata de una historia de un hombre que se convierte en el desagrado.</p>
+                <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
+            </div>
+            <div class="item-book">
+                <div class="caratula">
+                <img src="img/Caratulas-libros/fb2b2364b36a59aa300eaab6d377cf94.png" 
+                alt="book-4">
+            </div>
+                <h2>El Gato negro</h2>
+                <p>Este es uno de los libros de Edgar Allan Poe, un gato que desata un echo escalofriante.</p>
+                <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
+            </div>
+            <div class="item-book">
+                <div class="caratula">
+                <img src="https://images.cdn2.buscalibre.com/fit-in/360x360/4f/83/4f83ccdd48c8171e335531d12f58a52d.jpg" 
+                alt="book-5">
+            </div>
+                <h2>Satanás</h2>
+                <p>Satanás es un libro de Mario Mendoza y es uno de los libros más populares de la serie de libros de la saga de los libros de Mario Mendoza. Este libro es una historia de un hombre que se convierte en el desagrado.</p>
+                <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
+            </div>
+            <div class="item-book">
+                <div class="caratula">
+                <img src="https://images.cdn2.buscalibre.com/fit-in/360x360/4f/83/4f83ccdd48c8171e335531d12f58a52d.jpg" 
+                alt="book-6">
+            </div>
+                <h2>Satanás</h2>
+                <p>Satanás es un libro de Mario Mendoza y es uno de los libros más populares de la serie de libros de la saga de los libros de Mario Mendoza. Este libro es una historia de un hombre que se convierte en el desagrado.</p>
+                <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
+            </div>
+            <div class="item-book">
+                <div class="caratula">
+                <img src="img/Caratulas-libros/fb2b2364b36a59aa300eaab6d377cf94.png" 
+                alt="book-7">
+            </div>
+                <h2>El Gato negro</h2>
+                <p>Este es uno de los libros de Edgar Allan Poe, un gato que desata un echo escalofriante.</p>
+                <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
+            </div>
+            <div class="item-book add-book">
+                <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-crosshair"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8v-2a2 2 0 0 1 2 -2h2" /><path d="M4 16v2a2 2 0 0 0 2 2h2" /><path d="M16 4h2a2 2 0 0 1 2 2v2" /><path d="M16 20h2a2 2 0 0 0 2 -2v-2" /><path d="M9 12l6 0" /><path d="M12 9l0 6" /></svg>
+                <h2>Añadir libro</h2>
+                <p>Añade tu proximo Starbook!</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
