--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
             </div>
         </div>
     </section>
-    
+
+    <footer>
+        <p>&copy; 2024 Feelty</p>
+        <img src="/favicon/bookmarks.svg" 
+        alt="logo">
+    </footer>
 </body>
 </html>
