--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <img src="/favicon/bookmarks.svg" 
             alt="logo">
         <h1>Feelty</h1>
-        <h3>Cambia tu persona</h3>
-        <p>Avanza y has importantes cambios en tu vida.</p>
+        <h3>Tu libreria personal</h3>
+        <!-- <p>Avanza y has importantes cambios en tu vida.</p> -->
+         <p>Leer <span class="rainbow">Transforma</span></p>
         <a href="#books"><button>Mis libros</button></a>
     </div>
     </section>
