--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 alt="book-4">
             </div>
                 <h2>El Gato negro</h2>
-                <p>Este es uno de los libros de Edgar Allan Poe, un gato que desata un echo escalofriante.</p>
+                <p>Este es uno de los libros de Edgar Allan Poe, un gato que desata un hecho escalofriante.</p>
                 <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
             </div>
             <div class="item-book">
@@ -89,7 +89,7 @@
                 alt="book-7">
             </div>
                 <h2>El Gato negro</h2>
-                <p>Este es uno de los libros de Edgar Allan Poe, un gato que desata un echo escalofriante.</p>
+                <p>Este es uno de los libros de Edgar Allan Poe, un gato que desata un hecho escalofriante.</p>
                 <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
             </div>
             <div class="item-book add-book">
