--- a/index.html
+++ b/index.html
@@ -24,7 +24,82 @@
     </div>
     </section>
 
-    <section id="books">
+<section id="starbooks">
+    <h2>Starbooks 🌠🌠🌠</h2>
+    <div class="container-star-book">
+        <div class="wrapper">
+            <div class="container" id="c0">
+                <div class="image" id="i0">
+                    <img src="img/Caratulas-libros/fb2b2364b36a59aa300eaab6d377cf94.png" 
+                    alt="book-1" class="item-starbook">
+                    <div class="city">
+                    <!-- <?xml version="1.0" encoding="utf-8"?>
+
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 300 225" style="enable-background:new 0 0 300 225;" xml:space="preserve">
+                    <ellipse class="st4" id="sh1" cx="170.5" cy ="124.75" rx="37.5" ry="37.5"/>
+                    <ellipse id="XMLID_15_" class="st4" cx="170.5" cy="124.75" rx="27.5" ry="27.5"/>
+
+                    <polygon id="XMLID_1_" class="st2" points="-0.301,224.5 74.849,149.5 150,224.5 "/>
+                    <polygon id="XMLID_2_" class="st0" points="108,224.5 74.849,149.5 150,224.5 "/>
+                    <polygon id="XMLID_4_" class="st2" points="207.256,225.5 253.849,179 300.443,225.5 "/>
+                    <polygon id="XMLID_3_" class="st0" points="274.403,225.5 253.849,179 300.443,225.5 "/>
+                    <line id="XMLID_5_" class="st1" x1="179" y1="202" x2="179" y2="226"/>
+                    <line id="XMLID_6_" class="st1" x1="179" y1="207" x2="190" y2="207"/>
+                    <line id="XMLID_7_" class="st1" x1="172" y1="214" x2="180" y2="214"/>
+                    <line id="XMLID_8_" class="st1" x1="190" y1="202" x2="190" y2="207"/>
+                    <line id="XMLID_9_" class="st1" x1="172" y1="207" x2="172" y2="214"/>
+                    <circle id="XMLID_10_" class="st3" cx="87.5" cy="98.5" r="1.5"/>
+                    <circle id="XMLID_11_" class="st3" cx="24.5" cy="68.5" r="2.5"/>
+                    <circle id="XMLID_12_" class="st3" cx="219.5" cy="18.5" r="1.5"/>
+                    <circle id="XMLID_13_" class="st3" cx="272.5" cy="03.5" r="2.0"/>
+                    <circle id="XMLID_14_" class="st3" cx="144.5" cy="12.5" r="1.0"/>
+                    <circle id="XMLID_10_" class="st3" cx="107.5" cy="328.5" r="1.5"/>
+                    <circle id="XMLID_11_" class="st3" cx="24.5" cy="58.5" r="2.5"/>
+                    <circle id="XMLID_12_" class="st3" cx="19.5" cy="128.5" r="1.5"/>
+                    <circle id="XMLID_13_" class="st3" cx="72.5" cy="113.5" r="2.0"/>
+                    <circle id="XMLID_14_" class="st3" cx="174.5" cy="92.5" r="1.0"/>
+                    </svg> -->
+                    </div>
+                </div>
+                <div class="story" id="s0">
+                    <div class="info">
+                        <h3>El Gato Negro</h3>
+                        <!-- <p> Edgar allan poe</p>  -->
+                        </div>
+                </div>
+            </div>
+            <div class="container" id="c1">
+                <div class="image" id="i1">
+                    <img src="https://images.cdn2.buscalibre.com/fit-in/360x360/4f/83/4f83ccdd48c8171e335531d12f58a52d.jpg" 
+                    alt="book-1" class="item-starbook">
+                </div>
+                <div class="story" id="s1">
+                    <div class="info">
+                        <h3>Satanás</h3>
+                        <!-- <p> The Leaning Tower of Pisa or simply the Tower of Pisa is the campanile, or freestanding bell tower, of the cathedral of 
+                            the Italian city of Pisa, known worldwide for its unintended tilt</p> -->
+                        </div>
+                </div>
+            </div>
+            <div class="container" id="c2">
+                <div class="image" id="i2">
+                            <img src="img/Caratulas-libros/CARATULA-PRINCIPITO-FINAL-SEGUNA-EDICION-CURVAS.jpg" 
+                            alt="book-1" class="item-starbook">
+                </div>
+                <div class="story" id="s2">
+                    <div class="info">
+                    <h3>El principito</h3>
+                    <!-- <p> The Leaning Tower of Pisa or simply the Tower of Pisa is the campanile, or freestanding bell tower, of the cathedral of 
+                        the Italian city of Pisa, known worldwide for its unintended tilt</p> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="books">
         <img src="img/Branding/feelty.png" 
         class="feelty" alt="Feelty">
         <div class="container-books">
