--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon/bookmarks.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="/script.js" type="module"></script>
 </head>
 <body>
     <!-- <header>
     <h1>Feelty</h1>
     </header> -->
     <section id="home">
+
+  <!-- Ícono de usuario para abrir el modal -->
+  <a href="#" id="loginBtn"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-user"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" /><path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" /></svg></a>
+
+  <!-- Modal de login -->
+  <div id="loginModal" class="modal">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <h2>Iniciar sesión</h2>
+      <form>
+        <label for="username">Usuario:</label>
+        <input type="text" id="username" name="username" required>
+        
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required>
+        
+        <button type="submit" class="submit-btn">Entrar</button>
+      </form>
+    </div>
+  </div>
+
         <div class="container-home">
             <img src="/favicon/bookmarks.svg" 
             alt="logo">
@@ -111,6 +133,9 @@
 </section>
 
 <section id="books">
+    <!-- <img src="/img/Background/patron-bg.png" 
+     alt=""> -->
+
         <img src="img/Branding/feelty.png" 
         class="feelty" alt="Feelty">
         <div class="container-books">
