--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!-- <header>
     <h1>Feelty</h1>
     </header> -->
-    <section id="home">
-
+<section id="home">
   <!-- Ícono de usuario para abrir el modal -->
   <a href="#" id="loginBtn"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-user"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" /><path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" /></svg></a>
 
@@ -44,22 +43,43 @@
          <p>Leer <span class="rainbow">Transforma</span></p>
         <a href="#books"><button>Mis libros</button></a>
     </div>
-    </section>
+</section>
 
-    <div class="social-media">
-        <ul>
-            <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="https://twitter.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff" 
-                viewBox="0 0 1200 1227"><path fill="#fff" d="M714.163 519.284 1160.89 0h-105.86L667.137 450.887 357.328 0H0l468.492 681.821L0 
-                1226.37h105.866l409.625-476.152 327.181 476.152H1200L714.137 519.284h.026ZM569.165 687.828l-47.468-67.894-377.686-540.24h162.604l304.797
-                 435.991 47.468 67.894 396.2 566.721H892.476L569.165 687.854v-.026Z"/></svg></a></li>
-            <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a></li>
-            <li><a href="#home"><svg  xmlns="http://www.w3.org/2000/svg"  width="28"  height="28"  viewBox="0 0 24 24"  fill="#fff"
-                  class="icon icon-tabler icons-tabler-filled icon-tabler-square-arrow-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <path d="M19 2a3 3 0 0 1 3 3v14a3 3 0 0 1 -3 3h-14a3 3 0 0 1 -3 -3v-14a3 3 0 0 1 3 -3zm-7 5l-.09 .004l-.058 .007l-.118 .025l-.105 .035l-.113 .054l-.111 .071a1.008 1.008 0 0 0 -.112 .097l-4 4l-.083 .094a1 1 0 0 0 .083 1.32l.094 .083a1 1 0 0 0 1.32 -.083l2.293 -2.292v5.585l.007 .117a1 1 0 0 0 1.993 -.117v-5.585l2.293 2.292l.094 .083a1 1 0 0 0 1.32 -1.497l-4 -4l-.082 -.073l-.104 -.074l-.098 -.052l-.11 -.044l-.112 -.03l-.126 -.017l-.075 -.003z" /></svg></a></li>
-        </ul>
+<section id="stories">
+    <div class="slider-stories">
+        <div class="stories-wrapper">
+            <div class="container-stories">
+                <div class="item">
+                    <img src="/img/Carousel/monochrome_umbrella_rain_overalls_women_model-246561.jpg" alt="">
+                </div>
+                    <div class="item">
+                <img src="/img/Carousel/istockphoto-520866989-612x612.jpg" alt="">
+                    </div>
+                <div class="item">
+                    <img src="/img/Carousel/woman-guitarist-rock-metal-musician-action-performance-effect-fiery-cool-background-wallpaper-ai-generated-image_1085517-1545.avif" alt="">
+                </div>
+                <div class="item">
+                    <img src="/img/Carousel/paragliding-flying-sky-air-sports.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </div>
+</section>
+
+<div class="social-media">
+    <ul>
+        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="https://twitter.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff" 
+            viewBox="0 0 1200 1227"><path fill="#fff" d="M714.163 519.284 1160.89 0h-105.86L667.137 450.887 357.328 0H0l468.492 681.821L0 
+            1226.37h105.866l409.625-476.152 327.181 476.152H1200L714.137 519.284h.026ZM569.165 687.828l-47.468-67.894-377.686-540.24h162.604l304.797
+             435.991 47.468 67.894 396.2 566.721H892.476L569.165 687.854v-.026Z"/></svg></a></li>
+        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="#home"><svg  xmlns="http://www.w3.org/2000/svg"  width="28"  height="28"  viewBox="0 0 24 24"  fill="#fff"
+              class="icon icon-tabler icons-tabler-filled icon-tabler-square-arrow-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M19 2a3 3 0 0 1 3 3v14a3 3 0 0 1 -3 3h-14a3 3 0 0 1 -3 -3v-14a3 3 0 0 1 3 -3zm-7 5l-.09 .004l-.058 .007l-.118 .025l-.105 .035l-.113 .054l-.111 .071a1.008 1.008 0 0 0 -.112 .097l-4 4l-.083 .094a1 1 0 0 0 .083 1.32l.094 .083a1 1 0 0 0 1.32 -.083l2.293 -2.292v5.585l.007 .117a1 1 0 0 0 1.993 -.117v-5.585l2.293 2.292l.094 .083a1 1 0 0 0 1.32 -1.497l-4 -4l-.082 -.073l-.104 -.074l-.098 -.052l-.11 -.044l-.112 -.03l-.126 -.017l-.075 -.003z" /></svg></a></li>
+    </ul>
+</div>
 
 <section id="starbooks">
     <h2>Starbooks 🌠🌠🌠</h2>
