Add header, content in Stories and Styles in StarBooks

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <script src="/script.js" type="module"></script>
 </head>
 <body>
-    <!-- <header>
-    <h1>Feelty</h1>
-    </header> -->
 <section id="home">
   <!-- Ícono de usuario para abrir el modal -->
   <a href="#" id="loginBtn"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-user"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" /><path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" /></svg></a>
@@ -45,113 +42,114 @@
     </div>
 </section>
 
+
+<header>
+    <nav>
+        <div class="">
+        <a href="/">
+            <img src="/favicon/bookmarks.svg" 
+            alt="logo">
+            Feelty
+        </a>
+    </div>
+        <ul>
+            <a href="#books">
+                <li>Mis libros <img src="/img/line.png" 
+                    alt="">
+                </li>
+            </a>
+            <a href="#starbooks">
+                <li>StarBooks <img src="/img/line.png" 
+                    alt="">
+                </li>
+            </a>
+            <a href="#buy-books">
+                <li>Comprar libros <img src="/img/line.png" 
+                    alt="">
+                </li>
+            </a>
+            <a href="#">
+                <li>Nuestra identidad <img src="/img/line.png" 
+                    alt="">
+                </li>
+            </a>
+        </ul>
+    </nav>
+</header>
+
+<!-- Nav bar vertical -->
+<div class="social-media">
+    <nav>
+        <ul>
+            <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://twitter.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff" 
+                viewBox="0 0 1200 1227"><path fill="#fff" d="M714.163 519.284 1160.89 0h-105.86L667.137 450.887 357.328 0H0l468.492 681.821L0 
+                1226.37h105.866l409.625-476.152 327.181 476.152H1200L714.137 519.284h.026ZM569.165 687.828l-47.468-67.894-377.686-540.24h162.604l304.797
+                435.991 47.468 67.894 396.2 566.721H892.476L569.165 687.854v-.026Z"/></svg></a></li>
+            <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="#home"><svg  xmlns="http://www.w3.org/2000/svg"  width="28"  height="28"  viewBox="0 0 24 24"  fill="#fff"
+                class="icon icon-tabler icons-tabler-filled icon-tabler-square-arrow-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M19 2a3 3 0 0 1 3 3v14a3 3 0 0 1 -3 3h-14a3 3 0 0 1 -3 -3v-14a3 3 0 0 1 3 -3zm-7 5l-.09 .004l-.058 .007l-.118 .025l-.105 .035l-.113 .054l-.111 .071a1.008 1.008 0 0 0 -.112 .097l-4 4l-.083 .094a1 1 0 0 0 .083 1.32l.094 .083a1 1 0 0 0 1.32 -.083l2.293 -2.292v5.585l.007 .117a1 1 0 0 0 1.993 -.117v-5.585l2.293 2.292l.094 .083a1 1 0 0 0 1.32 -1.497l-4 -4l-.082 -.073l-.104 -.074l-.098 -.052l-.11 -.044l-.112 -.03l-.126 -.017l-.075 -.003z" /></svg></a></li>
+        </ul>
+    </nav>
+</div>
+
 <section id="stories">
+    <h2><em>TRANSFORMATE</em></h2>
+    <p>Has cambios significativos en tu vida  y logra liberar tu 100%.</p>
     <div class="slider-stories">
         <div class="stories-wrapper">
             <div class="container-stories">
                 <div class="item">
-                    <img src="/img/Carousel/monochrome_umbrella_rain_overalls_women_model-246561.jpg" alt="">
-                </div>
-                    <div class="item">
-                <img src="/img/Carousel/istockphoto-520866989-612x612.jpg" alt="">
-                    </div>
-                <div class="item">
-                    <img src="/img/Carousel/woman-guitarist-rock-metal-musician-action-performance-effect-fiery-cool-background-wallpaper-ai-generated-image_1085517-1545.avif" alt="">
+                    <img src="/img/Carousel/monochrome_umbrella_rain_overalls_women_model-246561.jpg" 
+                    alt="">
                 </div>
                 <div class="item">
-                    <img src="/img/Carousel/paragliding-flying-sky-air-sports.jpg" alt="">
+                    <img src="/img/Carousel/istockphoto-520866989-612x612.jpg" 
+                    alt="">
+                </div>
+                <div class="item">
+                    <img src="/img/Carousel/woman-guitarist-rock-metal-musician-action-performance-effect-fiery-cool-background-wallpaper-ai-generated-image_1085517-1545.avif" 
+                    alt="">
+                </div>
+                <div class="item">
+                    <img src="/img/Carousel/paragliding-flying-sky-air-sports.jpg" 
+                    alt="">
                 </div>
             </div>
         </div>
     </div>
+    <p><em>“Elige tu estilo, elige tus metas”</em></p>
 </section>
 
-<div class="social-media">
-    <ul>
-        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="https://twitter.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff" 
-            viewBox="0 0 1200 1227"><path fill="#fff" d="M714.163 519.284 1160.89 0h-105.86L667.137 450.887 357.328 0H0l468.492 681.821L0 
-            1226.37h105.866l409.625-476.152 327.181 476.152H1200L714.137 519.284h.026ZM569.165 687.828l-47.468-67.894-377.686-540.24h162.604l304.797
-             435.991 47.468 67.894 396.2 566.721H892.476L569.165 687.854v-.026Z"/></svg></a></li>
-        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="#home"><svg  xmlns="http://www.w3.org/2000/svg"  width="28"  height="28"  viewBox="0 0 24 24"  fill="#fff"
-              class="icon icon-tabler icons-tabler-filled icon-tabler-square-arrow-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-              <path d="M19 2a3 3 0 0 1 3 3v14a3 3 0 0 1 -3 3h-14a3 3 0 0 1 -3 -3v-14a3 3 0 0 1 3 -3zm-7 5l-.09 .004l-.058 .007l-.118 .025l-.105 .035l-.113 .054l-.111 .071a1.008 1.008 0 0 0 -.112 .097l-4 4l-.083 .094a1 1 0 0 0 .083 1.32l.094 .083a1 1 0 0 0 1.32 -.083l2.293 -2.292v5.585l.007 .117a1 1 0 0 0 1.993 -.117v-5.585l2.293 2.292l.094 .083a1 1 0 0 0 1.32 -1.497l-4 -4l-.082 -.073l-.104 -.074l-.098 -.052l-.11 -.044l-.112 -.03l-.126 -.017l-.075 -.003z" /></svg></a></li>
-    </ul>
-</div>
-
 <section id="starbooks">
-    <h2>Starbooks 🌠🌠🌠</h2>
-    <p>Estos son los libros magicos  tendencia que estan transformando</p>
+    <h2>Starbooks</h2>
+    <div class="tags"><p>Suspenso</p><p>Drama</p><p>Fantasia</p></div>
+    <p>Libros tendencia que están transformando</p>
+
     <div class="container-star-book">
         <div class="wrapper">
             <div class="container" id="c0">
                 <div class="image" id="i0">
                     <img src="img/Caratulas-libros/fb2b2364b36a59aa300eaab6d377cf94.png" 
                     alt="book-1" class="item-starbook">
-                    <div class="city">
-                    <!-- <?xml version="1.0" encoding="utf-8"?>
-
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 300 225" style="enable-background:new 0 0 300 225;" xml:space="preserve">
-                    <ellipse class="st4" id="sh1" cx="170.5" cy ="124.75" rx="37.5" ry="37.5"/>
-                    <ellipse id="XMLID_15_" class="st4" cx="170.5" cy="124.75" rx="27.5" ry="27.5"/>
-
-                    <polygon id="XMLID_1_" class="st2" points="-0.301,224.5 74.849,149.5 150,224.5 "/>
-                    <polygon id="XMLID_2_" class="st0" points="108,224.5 74.849,149.5 150,224.5 "/>
-                    <polygon id="XMLID_4_" class="st2" points="207.256,225.5 253.849,179 300.443,225.5 "/>
-                    <polygon id="XMLID_3_" class="st0" points="274.403,225.5 253.849,179 300.443,225.5 "/>
-                    <line id="XMLID_5_" class="st1" x1="179" y1="202" x2="179" y2="226"/>
-                    <line id="XMLID_6_" class="st1" x1="179" y1="207" x2="190" y2="207"/>
-                    <line id="XMLID_7_" class="st1" x1="172" y1="214" x2="180" y2="214"/>
-                    <line id="XMLID_8_" class="st1" x1="190" y1="202" x2="190" y2="207"/>
-                    <line id="XMLID_9_" class="st1" x1="172" y1="207" x2="172" y2="214"/>
-                    <circle id="XMLID_10_" class="st3" cx="87.5" cy="98.5" r="1.5"/>
-                    <circle id="XMLID_11_" class="st3" cx="24.5" cy="68.5" r="2.5"/>
-                    <circle id="XMLID_12_" class="st3" cx="219.5" cy="18.5" r="1.5"/>
-                    <circle id="XMLID_13_" class="st3" cx="272.5" cy="03.5" r="2.0"/>
-                    <circle id="XMLID_14_" class="st3" cx="144.5" cy="12.5" r="1.0"/>
-                    <circle id="XMLID_10_" class="st3" cx="107.5" cy="328.5" r="1.5"/>
-                    <circle id="XMLID_11_" class="st3" cx="24.5" cy="58.5" r="2.5"/>
-                    <circle id="XMLID_12_" class="st3" cx="19.5" cy="128.5" r="1.5"/>
-                    <circle id="XMLID_13_" class="st3" cx="72.5" cy="113.5" r="2.0"/>
-                    <circle id="XMLID_14_" class="st3" cx="174.5" cy="92.5" r="1.0"/>
-                    </svg> -->
-                    </div>
                 </div>
-                <div class="story" id="s0">
-                    <div class="info">
-                        <h3>El Gato Negro</h3>
-                        <!-- <p> Edgar allan poe</p>  -->
-                        </div>
-                </div>
+
             </div>
             <div class="container" id="c1">
                 <div class="image" id="i1">
                     <img src="https://images.cdn2.buscalibre.com/fit-in/360x360/4f/83/4f83ccdd48c8171e335531d12f58a52d.jpg" 
-                    alt="book-1" class="item-starbook">
+                    alt="book-2" class="item-starbook">
                 </div>
-                <div class="story" id="s1">
-                    <div class="info">
-                        <h3>Satanás</h3>
-                        <!-- <p> The Leaning Tower of Pisa or simply the Tower of Pisa is the campanile, or freestanding bell tower, of the cathedral of 
-                            the Italian city of Pisa, known worldwide for its unintended tilt</p> -->
-                        </div>
-                </div>
+
             </div>
             <div class="container" id="c2">
                 <div class="image" id="i2">
                             <img src="img/Caratulas-libros/CARATULA-PRINCIPITO-FINAL-SEGUNA-EDICION-CURVAS.jpg" 
-                            alt="book-1" class="item-starbook">
+                            alt="book-3" class="item-starbook">
                 </div>
-                <div class="story" id="s2">
-                    <div class="info">
-                    <h3>El principito</h3>
-                    <!-- <p> The Leaning Tower of Pisa or simply the Tower of Pisa is the campanile, or freestanding bell tower, of the cathedral of 
-                        the Italian city of Pisa, known worldwide for its unintended tilt</p> -->
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
@@ -347,7 +345,7 @@
           
           <div class="footer-bottom">
             <a href="/html/rules.html"><button>Politicas de privacidad</button></a>
-            &copy; 2024 Feelty. Todos los derechos reservados.
+            <p>&copy; 2024 Feelty ­· Todos los derechos reservados.</p>
           </div>
 
           <a href="/"><img src="/favicon/bookmarks.svg" 
