--- a/index.html
+++ b/index.html
@@ -52,24 +52,31 @@
             Feelty
         </a>
     </div>
-        <ul>
+
+    <svg  xmlns="http://www.w3.org/2000/svg" id="btn-menu"  width="44"  height="44"  viewBox="0 0 24 24"  
+    fill="none"  stroke="#fff"  stroke-width="2"  stroke-linecap="round"  
+    stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-menu-2">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6l16 0" /><path d="M4 12l16 0" />
+    <path d="M4 18l16 0" /></svg>
+
+        <ul id="menu">
             <a href="#books">
-                <li>Mis libros <img src="/img/line.png" 
+                <li class="item-menu">Mis libros <img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
             <a href="#starbooks">
-                <li>StarBooks <img src="/img/line.png" 
+                <li class="item-menu">StarBooks <img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
             <a href="#buy-books">
-                <li>Comprar libros <img src="/img/line.png" 
+                <li class="item-menu">Comprar libros <img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
             <a href="#">
-                <li>Nuestra identidad <img src="/img/line.png" 
+                <li class="item-menu">Nuestra identidad <img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
@@ -96,6 +103,7 @@
 </div>
 
 <section id="stories">
+    <div class="filter"></div>
     <h2><em>TRANSFORMATE</em></h2>
     <p>Has cambios significativos en tu vida  y logra liberar tu 100%.</p>
     <div class="slider-stories">
@@ -226,10 +234,10 @@
                 <p>Este es uno de los libros de Edgar Allan Poe, un gato que desata un hecho escalofriante.</p>
                 <a href="https://www.amazon.com/El-libro-vida-libro-normal/dp/8493573457" target="_blank"><button>Leer</button></a>
             </div>
-            <div class="item-book add-book">
+            <div class="item-book" id="add-book">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-crosshair"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8v-2a2 2 0 0 1 2 -2h2" /><path d="M4 16v2a2 2 0 0 0 2 2h2" /><path d="M16 4h2a2 2 0 0 1 2 2v2" /><path d="M16 20h2a2 2 0 0 0 2 -2v-2" /><path d="M9 12l6 0" /><path d="M12 9l0 6" /></svg>
                 <h2>Añadir libro</h2>
-                <p>Añade tu proximo Starbook!</p>
+                <p>Añade el proximo Starbook!</p>
             </div>
         </div>
     </section>
