Add styles Section Books and add new Page ForoBlog

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     alt="">
                 </li>
             </a>
-            <a href="#our-team">
-                <li class="item-menu explorer-books">Descubrir Libros<img src="/img/line.png" 
+            <a href="/html/foroblog.html">
+                <li class="item-menu explorer-books" id="explorer-books">Descubrir Libros<img src="/img/line.png" 
                     alt="">
                 </li>
             </a>
@@ -176,6 +176,8 @@
         class="feelty" alt="Feelty">
         <div class="container-books">
             <h2>Todos mis libros</h2>
+            <h4>Estos son los libros que agregaste a tu libreria</h4>
+            <p>Puedes fijarlos, sequir leyendolos, borrarlos, compartirlos con tus amigos o descargarlos en tu dispositivo.</p>
             <div class="item-book">
                 <div class="action-nav">
                     <div class="blog">
@@ -398,7 +400,7 @@
 
             <div class="item-book" id="add-book">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-crosshair"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8v-2a2 2 0 0 1 2 -2h2" /><path d="M4 16v2a2 2 0 0 0 2 2h2" /><path d="M16 4h2a2 2 0 0 1 2 2v2" /><path d="M16 20h2a2 2 0 0 0 2 -2v-2" /><path d="M9 12l6 0" /><path d="M12 9l0 6" /></svg>
-                <h2>Añadir libro</h2>
+                <h2>Añadir</br> libro</h2>
                 <p>Añade el proximo Starbook!</p>
             </div>
         </div>
